@@ -1,34 +1,0 @@
-@comment $NetBSD: PLIST,v 1.4 2011/09/18 11:58:48 obache Exp $
-bin/tunapie
-man/man1/tunapie.1
-share/applications/tunapie.desktop
-share/pixmaps/tplogo.xpm
-share/tunapie/AboutTuner.py
-share/tunapie/AboutTuner.pyc
-share/tunapie/AddStream.py
-share/tunapie/AddStream.pyc
-share/tunapie/RecordQueue.py
-share/tunapie/RecordQueue.pyc
-share/tunapie/RecordTime.py
-share/tunapie/RecordTime.pyc
-share/tunapie/TunaSearch.py
-share/tunapie/TunaSearch.pyc
-share/tunapie/Tunapie.py
-share/tunapie/Tunapie.pyc
-share/tunapie/TunerInfoDialog.py
-share/tunapie/TunerInfoDialog.pyc
-share/tunapie/TunerPrefs.py
-share/tunapie/TunerPrefs.pyc
-share/tunapie/fave.png
-share/tunapie/find.png
-share/tunapie/info.png
-share/tunapie/play.png
-share/tunapie/radio.png
-share/tunapie/rec.png
-share/tunapie/remfave.png
-share/tunapie/stop.png
-share/tunapie/tunapie2_main.py
-share/tunapie/tunapie2_main.pyc
-share/tunapie/tuner.py
-share/tunapie/tuner.pyc
-share/tunapie/tv.png
