@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2023,v 1.4017 2023/06/26 11:47:57 wiz Exp $
+$NetBSD: CHANGES-2023,v 1.4018 2023/06/26 11:49:30 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2023:
 
@@ -5584,3 +5584,4 @@ Changes to the packages collection and infrastructure in 2023:
 	Added security/botan3 version 3.0.0 [wiz 2023-06-26]
 	Updated security/keepassxc to 2.7.5nb2 [wiz 2023-06-26]
 	Added databases/diesel-cli version 2.1.0 [wiz 2023-06-26]
+	Removed audio/tunapie [wiz 2023-06-26]
